--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,26 +1,11 @@
-body {
+.project--container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.ranking, .ranking--categories {
-    display: grid;
-    grid-template-columns: 100px 100px 100px;
+    width: 100vw;
+    height: 100vh;
 }
 
 
-.leader--board {
-    width: 300px;
-    height: 40vh;
-    overflow-y: auto;
-    text-align: center;
-    border: solid 1px black;
-    justify-self: center;
-}
 
-.leader--label {
-    display: flex;
-    width: 300px;
-    justify-content: center;
-}
