--- a/src/styles/gameboard.css
+++ b/src/styles/gameboard.css
@@ -17,7 +17,7 @@ body{
     position: absolute;
     width: 100px;
     height: 100px;
-    border: 5px solid black;
+    border: none;
 }
 
 #fib1 {
@@ -46,10 +46,22 @@ body{
 }
 
 #question--div {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
+    display: flex;
+    flex-direction: column;
     top: 0px;
     left: 0px;
+}
+
+#question--div>button {
+    border: none;
+    background-color: black;
+    color: white;
+}
+
+#question--div>button:hover {
+    background-color: grey;
 }
 
 
