--- a/src/styles/explain.css
+++ b/src/styles/explain.css
@@ -6,6 +6,8 @@
 .rules--border {
     border: 1px black solid;
     border-radius: 5px;
+    background-color: black;
+    color: white;
     padding: 15px;
     margin: 0;
     width: 30vw;
@@ -16,12 +18,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 15px;
     font-size: 20px;
 }
 
+.fblthp--portrait {
+    height: 100px;
+    border-radius: 5px;
+}
+
 .play--button {
-    background-color: white;
-    border: black solid 1px;
+    background-color: black;
+    border: white solid 1px;
+    color: white;
     border-radius: 5px;
     width: 200px;
     font-size: 20px;
