--- a/src/styles/gameboard.css
+++ b/src/styles/gameboard.css
@@ -5,7 +5,7 @@ body{
 .game--image {
     margin-top: 500px;
     margin-left: 2750px;
-    margin-right: 10px;
+    margin-right: 150px;
 }
 
 #game--container {
@@ -13,7 +13,7 @@ body{
 }
 
 .square--div {
-    z-index: 1;
+    z-index: 3;
     position: absolute;
     width: 100px;
     height: 100px;
@@ -22,27 +22,27 @@ body{
 
 #fib1 {
     top: 54%;
-    left: 43.75%;
+    left: 42.85%;
 }
 
 #fib2 {
     top: 46%;
-    right: 36.25%;
+    right: 37.5%;
 }
 
 #fib3 {
     top: 49%;
-    right: 24.25%;
+    right: 25.8%;
 }
 
 #fib4 {
     top: 53%;
-    right: 13.75%;
+    right: 15.4%;
 }
 
 #fib5 {
     top: 43%;
-    right: 1.25%;
+    right: 3.4%;
 }
 
 #question--div {
@@ -62,6 +62,15 @@ body{
 
 #question--div>button:hover {
     background-color: grey;
+}
+
+.click--message {
+    position: fixed;
+    top: 20%;
+    right: 41.7%;
+    font-size: 30px;
+    background-color: black;
+    color: white;
 }
 
 
