--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -4,7 +4,7 @@
 }
 
 .ranking--categories {
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px white;
     font-weight: 600;
 }
 
@@ -14,7 +14,10 @@
     overflow-y: auto;
     overflow-x: hidden;
     text-align: center;
-    border: solid 1px black;
+    border: solid 3px white;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
 }
 
 .leader--label {
@@ -23,4 +26,27 @@
     justify-content: center;
     font-size: 20px;
     font-weight: 600;
+}
+
+.leaderBoard--buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    border: solid white 2px;
+    border-radius: 5px;
+    text-decoration: none;
+    width: 125px;
+    padding: 5px;
+}
+
+.buttons:visited {
+    color: white;
 }
